{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 71,
  "lineage": "4ad52066-6689-9d56-1b9a-b53eae5e67d8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-093109739c52f31fd",
            "arn": "arn:aws:ec2:us-east-1:445711599575:elastic-ip/eipalloc-093109739c52f31fd",
            "association_id": "eipassoc-0ef30b5c06cefbea4",
            "domain": "vpc",
            "id": "eipalloc-093109739c52f31fd",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d7893b0ede210186",
            "private_dns": "ip-10-0-1-169.ec2.internal",
            "private_ip": "10.0.1.169",
            "public_dns": "ec2-32-195-131-174.compute-1.amazonaws.com",
            "public_ip": "32.195.131.174",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "iicpc-benchgrid-nat-eip"
            },
            "tags_all": {
              "Name": "iicpc-benchgrid-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "445711599575",
            "id": "eipalloc-093109739c52f31fd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:445711599575:internet-gateway/igw-042a50f3cc72ee6bb",
            "id": "igw-042a50f3cc72ee6bb",
            "owner_id": "445711599575",
            "region": "us-east-1",
            "tags": {
              "Name": "iicpc-benchgrid-igw"
            },
            "tags_all": {
              "Name": "iicpc-benchgrid-igw"
            },
            "vpc_id": "vpc-057d73d5135f4e12a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "445711599575",
            "id": "igw-042a50f3cc72ee6bb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-093109739c52f31fd",
            "association_id": "eipassoc-0ef30b5c06cefbea4",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-096a4d3392744547b",
            "network_interface_id": "eni-0d7893b0ede210186",
            "private_ip": "10.0.1.169",
            "public_ip": "32.195.131.174",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-092a49f3d137bb241",
            "tags": {
              "Name": "iicpc-benchgrid-nat-gw"
            },
            "tags_all": {
              "Name": "iicpc-benchgrid-nat-gw"
            },
            "vpc_id": "vpc-057d73d5135f4e12a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "445711599575",
            "id": "nat-096a4d3392744547b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:445711599575:route-table/rtb-0e96cb4d9c4263a42",
            "id": "rtb-0e96cb4d9c4263a42",
            "owner_id": "445711599575",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-096a4d3392744547b",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "iicpc-benchgrid-private-rt"
            },
            "tags_all": {
              "Name": "iicpc-benchgrid-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-057d73d5135f4e12a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "445711599575",
            "id": "rtb-0e96cb4d9c4263a42",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:445711599575:route-table/rtb-0dec7ec24effd57b4",
            "id": "rtb-0dec7ec24effd57b4",
            "owner_id": "445711599575",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-042a50f3cc72ee6bb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "iicpc-benchgrid-public-rt"
            },
            "tags_all": {
              "Name": "iicpc-benchgrid-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-057d73d5135f4e12a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "445711599575",
            "id": "rtb-0dec7ec24effd57b4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a370e5a4a689fc23",
            "region": "us-east-1",
            "route_table_id": "rtb-0e96cb4d9c4263a42",
            "subnet_id": "subnet-0b83e32a3682642d5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "445711599575",
            "id": "rtbassoc-0a370e5a4a689fc23",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.cache",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04eab5bebd7083254",
            "region": "us-east-1",
            "route_table_id": "rtb-0e96cb4d9c4263a42",
            "subnet_id": "subnet-06ded9491b915fa92"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "445711599575",
            "id": "rtbassoc-04eab5bebd7083254",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.cache",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0149485ecfe13d069",
            "region": "us-east-1",
            "route_table_id": "rtb-0e96cb4d9c4263a42",
            "subnet_id": "subnet-0d81a4a1df449e9c9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "445711599575",
            "id": "rtbassoc-0149485ecfe13d069",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.database",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbfeab4ddd10397b",
            "region": "us-east-1",
            "route_table_id": "rtb-0e96cb4d9c4263a42",
            "subnet_id": "subnet-0abeb5b42f68de7ef"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "445711599575",
            "id": "rtbassoc-0bbfeab4ddd10397b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.database",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0403ac0e30fcf558e",
            "region": "us-east-1",
            "route_table_id": "rtb-0e96cb4d9c4263a42",
            "subnet_id": "subnet-0f993e98b5b2f620d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "445711599575",
            "id": "rtbassoc-0403ac0e30fcf558e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079f02d98e5c03a24",
            "region": "us-east-1",
            "route_table_id": "rtb-0e96cb4d9c4263a42",
            "subnet_id": "subnet-0d4d88d5641483d1d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "445711599575",
            "id": "rtbassoc-079f02d98e5c03a24",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05924666efe5c3210",
            "region": "us-east-1",
            "route_table_id": "rtb-0dec7ec24effd57b4",
            "subnet_id": "subnet-092a49f3d137bb241"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "445711599575",
            "id": "rtbassoc-05924666efe5c3210",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013595a9532d1d42f",
            "region": "us-east-1",
            "route_table_id": "rtb-0dec7ec24effd57b4",
            "subnet_id": "subnet-0725114aee4668cfe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "445711599575",
            "id": "rtbassoc-013595a9532d1d42f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cache_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:445711599575:security-group/sg-02c3f342cbc0a71e4",
            "description": "Allow inbound Redis traffic from EKS nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02c3f342cbc0a71e4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis access from EKS nodes",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c57059d454138cec"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "iicpc-benchgrid-cache-sg",
            "name_prefix": "",
            "owner_id": "445711599575",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "iicpc-benchgrid-cache-sg"
            },
            "tags_all": {
              "Name": "iicpc-benchgrid-cache-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-057d73d5135f4e12a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "445711599575",
            "id": "sg-02c3f342cbc0a71e4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.eks_nodes_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:445711599575:security-group/sg-0c41324b83a5d535f",
            "description": "Allow inbound PostgreSQL traffic from EKS nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c41324b83a5d535f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Postgres access from EKS nodes",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c57059d454138cec"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "iicpc-benchgrid-db-sg",
            "name_prefix": "",
            "owner_id": "445711599575",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "iicpc-benchgrid-db-sg"
            },
            "tags_all": {
              "Name": "iicpc-benchgrid-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-057d73d5135f4e12a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "445711599575",
            "id": "sg-0c41324b83a5d535f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.eks_nodes_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:445711599575:security-group/sg-0c57059d454138cec",
            "description": "Security group for EKS compute nodes to access databases and services",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c57059d454138cec",
            "ingress": [],
            "name": "iicpc-benchgrid-nodes-sg",
            "name_prefix": "",
            "owner_id": "445711599575",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "iicpc-benchgrid-nodes-sg"
            },
            "tags_all": {
              "Name": "iicpc-benchgrid-nodes-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-057d73d5135f4e12a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "445711599575",
            "id": "sg-0c57059d454138cec",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:445711599575:subnet/subnet-0b83e32a3682642d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b83e32a3682642d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "445711599575",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "iicpc-benchgrid-cache-0"
            },
            "tags_all": {
              "Name": "iicpc-benchgrid-cache-0"
            },
            "vpc_id": "vpc-057d73d5135f4e12a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "445711599575",
            "id": "subnet-0b83e32a3682642d5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:445711599575:subnet/subnet-06ded9491b915fa92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.31.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ded9491b915fa92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "445711599575",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "iicpc-benchgrid-cache-1"
            },
            "tags_all": {
              "Name": "iicpc-benchgrid-cache-1"
            },
            "vpc_id": "vpc-057d73d5135f4e12a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "445711599575",
            "id": "subnet-06ded9491b915fa92",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:445711599575:subnet/subnet-0d81a4a1df449e9c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d81a4a1df449e9c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "445711599575",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "iicpc-benchgrid-database-0"
            },
            "tags_all": {
              "Name": "iicpc-benchgrid-database-0"
            },
            "vpc_id": "vpc-057d73d5135f4e12a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "445711599575",
            "id": "subnet-0d81a4a1df449e9c9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:445711599575:subnet/subnet-0abeb5b42f68de7ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abeb5b42f68de7ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "445711599575",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "iicpc-benchgrid-database-1"
            },
            "tags_all": {
              "Name": "iicpc-benchgrid-database-1"
            },
            "vpc_id": "vpc-057d73d5135f4e12a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "445711599575",
            "id": "subnet-0abeb5b42f68de7ef",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:445711599575:subnet/subnet-0f993e98b5b2f620d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f993e98b5b2f620d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "445711599575",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "iicpc-benchgrid-private-0",
              "kubernetes.io/cluster/iicpc-benchgrid": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "iicpc-benchgrid-private-0",
              "kubernetes.io/cluster/iicpc-benchgrid": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-057d73d5135f4e12a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "445711599575",
            "id": "subnet-0f993e98b5b2f620d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:445711599575:subnet/subnet-0d4d88d5641483d1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4d88d5641483d1d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "445711599575",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "iicpc-benchgrid-private-1",
              "kubernetes.io/cluster/iicpc-benchgrid": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "iicpc-benchgrid-private-1",
              "kubernetes.io/cluster/iicpc-benchgrid": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-057d73d5135f4e12a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "445711599575",
            "id": "subnet-0d4d88d5641483d1d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:445711599575:subnet/subnet-092a49f3d137bb241",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092a49f3d137bb241",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "445711599575",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "iicpc-benchgrid-public-0",
              "kubernetes.io/cluster/iicpc-benchgrid": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "iicpc-benchgrid-public-0",
              "kubernetes.io/cluster/iicpc-benchgrid": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-057d73d5135f4e12a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "445711599575",
            "id": "subnet-092a49f3d137bb241",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:445711599575:subnet/subnet-0725114aee4668cfe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0725114aee4668cfe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "445711599575",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "iicpc-benchgrid-public-1",
              "kubernetes.io/cluster/iicpc-benchgrid": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "iicpc-benchgrid-public-1",
              "kubernetes.io/cluster/iicpc-benchgrid": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-057d73d5135f4e12a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "445711599575",
            "id": "subnet-0725114aee4668cfe",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:445711599575:vpc/vpc-057d73d5135f4e12a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-018c14ee999cd1c59",
            "default_route_table_id": "rtb-02d732ee9c2401d78",
            "default_security_group_id": "sg-0d99596fadedc59d4",
            "dhcp_options_id": "dopt-0ad53b3248fb080cd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-057d73d5135f4e12a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02d732ee9c2401d78",
            "owner_id": "445711599575",
            "region": "us-east-1",
            "tags": {
              "Name": "iicpc-benchgrid-vpc",
              "kubernetes.io/cluster/iicpc-benchgrid": "shared"
            },
            "tags_all": {
              "Name": "iicpc-benchgrid-vpc",
              "kubernetes.io/cluster/iicpc-benchgrid": "shared"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "445711599575",
            "id": "vpc-057d73d5135f4e12a",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}